--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -6,26 +6,6 @@
 @import "tailwindcss/utilities";
 @import "utilities.css";
 
-@font-face {
-  font-family: 'analogueitalic';
-  src: url('/assets/fonts/analogue-italic-webfont.woff2') format('woff2'),
-       url('/assets/fonts/analogue-italic-webfont.woff') format('woff'),
-       url('/assets/fonts/analogue-italic-webfont.ttf') format('truetype'),
-       url('/assets/fonts/analogue-italic-webfont.svg#analogueitalic') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'analogueregular';
-  src: url('/assets/fonts/analogue-webfont.woff2') format('woff2'),
-       url('/assets/fonts/analogue-webfont.woff') format('woff'),
-       url('/assets/fonts/analogue-webfont.ttf') format('truetype'),
-       url('/assets/fonts/analogue-webfont.svg#analogueregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
 .text-blue {
   color: #90bacb;
 }
@@ -40,21 +20,6 @@
 }
 .text-blue-darkest {
   color: #1d2c36;
-}
-.text-orange {
-  color: #ae4225;
-}
-.text-orange-darker {
-  color: #582215;
-}
-.text-orange-lighter {
-  color: #bc6935;
-}
-.text-beige {
-  color: #eed7a5;
-}
-.text-beige-lighter {
-  color: #f7efdc;
 }
 .bg-blue {
   background-color: #90bacb;
@@ -71,21 +36,6 @@
 .bg-blue-darkest {
   background-color: #1d2c36;
 }
-.bg-orange {
-  background-color: #ae4225;
-}
-.bg-orange-darker {
-  background-color: #582215;
-}
-.bg-orange-lighter {
-  background-color: #bc6935;
-}
-.bg-beige {
-  background-color: #eed7a5;
-}
-.bg-beige-lighter {
-  background-color: #f7efdc;
-}
 
 body {
   background-color: #c6dce5;
@@ -94,8 +44,12 @@ body {
   line-height: 1.2;
   @apply min-h-screen;
 }
-
-@media (min-width: 780px) {
+ p {
+  font-size: 1.25rem;
+  line-height: 1.5;
+ }
+ 
+/* @media (min-width: 780px) {
   body {
     background-image: url("/assets/images/site-background.svg");
     background-attachment: fixed;
@@ -104,7 +58,7 @@ body {
     background-size: cover;
     background-origin: border-box;
   }
-}
+} */
 
 main {
   @apply min-h-screen;
@@ -148,12 +102,16 @@ nav ul li a:active {
   transform: translateY(1px);
 }
 
+h1, h2, h3, p {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 h1 {
-  font-family: 'analogueregular';
+  /* font-family: 'analogueregular'; */
   @apply text-5xl;
 }
 h2 {
-  font-family: 'analogueregular';
+  /* font-family: 'analogueregular'; */
   font-weight:bold;
   @apply 
   text-4xl;
