--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,25 +1,22 @@
 {{page-title
-  "Melanie Sumner, Chicago-based Accessibility Engineer, Speaker, Author"
+  "Melanie Sumner, Chicago-based Accessibility Engineer, Global Speaker, and Author"
 }}
 <article>
   <p class="intro">
     My goal: make it easier to build accessible
     websites.
   </p>
-  <p class="mt-4">
-    If you're in tech, you might already know my work, maybe from Ember.js or
-    the WAI-ARIA Working Group. Maybe you've seen one of my talks on
-    accessibility, or have run across my slide decks on <a href="https://noti.st/melsumner" rel="nofollow, noreferrer, external">Notist</a>. Perhaps you"ve
-    read some things I've written. No matter who you are or why you're on my
-    website, I hope one thing is really clear-- I'm really passionate about
-    building things for the web.
-  </p>
-  <p class="mt-4">
-    I am also a disabled military veteran and I'm proud of my time in service.
-    I give back by serving on the board of Vets Who Code, an organization that helps veterans
-    learn how to code and find jobs in tech. So if your company is hiring, reach
-    out! I always know a few solid candidates.
-  </p>
+  <p class="mt-8">Welcome to my corner of the web. I'm Melanie Sumner, a decorated and disabled military veteran, as well as a seasoned engineer and a trailblazer in the realm of digital accessibility. I'm the visionary behind the groundbreaking concept of <a href="https://continuousaccessibility.com">Continuous Accessibility</a>.</p>
+
+    <p class="mt-4">My journey into this transformative field is a testament to my enduring commitment to technical excellence and my unshakeable belief in the power of technology to foster inclusivity.</p>
+
+    <p class="mt-4">Throughout my career, I've not only championed digital accessibility but also provided technical leadership that has reshaped the way we approach inclusive design. My expertise lies in harnessing the capabilities of technology to bridge gaps and empower individuals of all abilities, ensuring they have equal access to digital platforms.</p>
+
+    <p class="mt-4">My primary goal is to make it easier for engineers to build accessible websites. I understand the challenges that developers face in this ever-evolving digital landscape, and I'm dedicated to providing the tools and knowledge needed to simplify the process.</p>
+
+    <p class="mt-4">My story is one of technical innovation and unwavering dedication. I've dedicated my professional life to pushing the boundaries of what's achievable in digital accessibility. Through <a href="https://continuousaccessibility.com">Continuous Accessibility</a>, I've redefined the technical landscape, sparking a paradigm shift that has reverberated throughout the tech industry.</p>
+
+    <p class="mt-4">Join me on this journey as we explore the pivotal technical milestones of my career, the transformative impact of <a href="https://continuousaccessibility.com">Continuous Accessibility</a>, and the enduring legacy of my technical leadership in shaping a more inclusive digital world. My goal is to inspire and educate, demonstrating the profound influence that one person's technical expertise and leadership can have in breaking down barriers and forging a brighter, more accessible future for all.</p>
 
   <h2 class="mt-8">Projects</h2>
   <p class="my-4">I've done a few projects that I particularly care about. Here are a few.</p>
@@ -33,20 +30,8 @@
                 <h3>
                     <a href="https://a11y-automation.dev">A11y Automation Tracker</a>
                 </h3>
-                <p>Tracks availability of automated checks for potential a11y violations.</p>
+                <p class="mt-8">Tracks availability of automated checks for potential a11y violations.</p>
                 <small class="underline">https://a11y-automation.dev</small>
-            </div>
-        </li>
-        <li class="card">
-            <div class="img">
-                <img src="/assets/images/why-ember.png" alt="" role="presentation" />
-            </div>
-            <div class="text">
-                <h3>
-                    <a href="https://whyember.com">Why Ember</a>
-                </h3>
-                <p>Why Ember should be the JavaScript framework you try for your next project.</p>
-                <small class="underline">https://whyember.com/</small>
             </div>
         </li>
         <li class="card">
@@ -57,8 +42,20 @@
                 <h3>
                     <a href="https://pleasefunda11y.com">Please Fund A11y</a>
                 </h3>
-                <p>This guide outlines the places where open-source accessibility work would benefit from funding.</p>
+                <p class="mt-8">This guide outlines the places where open-source accessibility work would benefit from funding.</p>
                 <small class="underline">https://pleasefunda11y.com</small>
+            </div>
+        </li>
+        <li class="card">
+            <div class="img">
+                <img src="/assets/images/why-ember.png" alt="" role="presentation" />
+            </div>
+            <div class="text">
+                <h3>
+                    <a href="https://whyember.com">Why Ember</a>
+                </h3>
+                <p class="mt-8">Why Ember should be the JavaScript framework you try for your next project.</p>
+                <small class="underline">https://whyember.com/</small>
             </div>
         </li>
         <li class="card">
@@ -69,7 +66,7 @@
                 <h3>
                     <a href="https://github.com/ember-a11y/ember-a11y-refocus">Ember A11y Refocus</a>
                 </h3>
-                <p>A library that provides an accessible routing solution for Ember apps.</p>
+                <p class="mt-8">A library that provides an accessible routing solution for Ember apps.</p>
                 <small class="underline">https://github.com/ember-a11y/ember-a11y-refocus</small>
             </div>
         </li>
